[package]
name = "Algos"
version = "0.1.0"
authors = ["Rich Wandell <richwandell@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
num_cpus = "1.10.1"
spmc = "0.3.0"
ndarray = "0.13.0"
ndarray-stats = "0.3.0"

[profile.dev]
#opt-level = 3
#debug = false
